addons/istio-ingress/config/manifest/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*.test.clouddrove.com"
    - "test.clouddrove.com"
    port:
      number: 80
      name: http
      protocol: HTTP
