addons/istio-ingress/config/manifest/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    meta.helm.sh/release-name: appname
    meta.helm.sh/release-namespace: istio-system
  generation: 1
  labels:
    app.kubernetes.io/instance: appname
    app.kubernetes.io/name: appname
  name: appname
  namespace: istio-system
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - test.clouddrove.com
  http:
  - route:
    - destination:
        host: appname
        port:
          number: 80
